Fix timeline alignment

--- a/src/Feed.css
+++ b/src/Feed.css
@@ -3,7 +3,7 @@
 }
 
 .feed {
-  margin-left: 39px;
+  margin-left: 27px;
 }
 
 .time-line {
